Show timer 00:00 for few secs with alarm and fix top spacing overlay

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -31,13 +31,14 @@
 }
 
 .clock-container {
-  position: absolute;
+  position: relative;
   top: 50%;
-  transform: translateY(-60%);
+  transform: translateY(-65%);
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .timebox-toggle-container {
